// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  className="src-components-tags-editor-tag__tag"
>
  <span>
    Some Label
  </span>
  <FaClose
    className="src-components-tags-editor-tag__icon"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
  />
</div>
`;

exports[`should render correctly when is being deleted 1`] = `
<div
  className="src-components-tags-editor-tag__tag"
>
  <span>
    Some Label
  </span>
  <div
    className="src-components-tags-editor-tag__loader"
  >
    <Loader
      size="small"
      type="inverse"
    />
  </div>
</div>
`;
